--- a/10-Template/ReleaseStatus.mediawiki
+++ b/10-Template/ReleaseStatus.mediawiki
@@ -3,10 +3,10 @@
 
 '''Stable''': <font style="color: green">''None''</font>
 
-'''Developer''': [[Release:DrNo | 0.7 DrNo]]
+'''Developer''': [[Release:DrO_o | 0.8 DrO_o]]
 
 '''Notes''':
-* DrNo was released 2010-02-19,<br /> [[Download XMMS2 | check it out]] and [[Reporting bugs | report bugs]]!
+* DrO_o was released 2011-10-20,<br /> [[Download XMMS2 | check it out]] and [[Reporting bugs | report bugs]]!
 * XMMS2 is still under development.<br />You may [[Developer Corner|hack and help]] if you wish. :)
 * More up-to-date code can be found <br /> in the [http://git.xmms.se/cgit.cgi/xmms2/xmms2-devel/ xmms2-devel.git] tree.
 </div>
