--- a/0-/README.mediawiki
+++ b/0-/README.mediawiki
@@ -1,7 +1,7 @@
 __NOTOC__
 
 ;Note:
-''This page is kept in sync with the [http://git.xmms.se/cgit.cgi/xmms2/xmms2-stable/tree/README README] file distributed with the XMMS2 source code (as per [[Release Checklist]]).''
+''This page is kept in sync with the [http://git.xmms.se/xmms2/xmms2-stable/tree/README README] file distributed with the XMMS2 source code (as per [[Release Checklist]]).''
 
 ==XMMS2==
 
@@ -24,25 +24,24 @@ just yet. This is a good thing if you don't mind getting your hands dirty.
 
 ==INSTALLING==
 
-See INSTALL file.
-(for the impatient people: ./waf configure && ./waf && sudo ./waf install)
+See INSTALL file. (for the impatient people: ./waf configure && ./waf && sudo
+./waf install)
 
 
 ==COPYRIGHT==
 
-See COPYING for details.
-(for the ones who don't care about details: LGPL)
+See COPYING for details. (for the ones who don't care about details: LGPL)
 
 ==CREDITS==
 
-See the AUTHORS file.
-(for the people not in AUTHORS: like everyone but you - help and you will be included as well)
+See the AUTHORS file. (for the people not in AUTHORS: like everyone but you -
+help and you will be included as well)
 
 
 ==HELPING==
 
 Please send patches to the mailing list or bug tracker! A good starting point
-for further info might be: http://wiki.xmms2.xmms.se/index.php/Developer_Corner
+for further info might be: http://xmms2.org/wiki/Developer_Corner
 
 
 ==CONTACT==
@@ -51,12 +50,11 @@ Feel free to post any questions/patches/whatever to the mailing list:
 xmms2-devel@lists.xmms.se
 (http://lists.xmms.se/cgi-bin/mailman/listinfo/xmms2-devel for subscription)
 
-The IRC channel is usually fairly active as well,
-chat away at: #xmms2 on freenode (irc.freenode.net)
+The IRC channel is usually fairly active as well, chat away at: #xmms2 on
+freenode (irc.freenode.net)
 
-Report bugs to the bug tracker at: http://bugs.xmms2.xmms.se/
-(account registration required - Linus, you can just post
-the reports to the mailing list)
+Report bugs to the bug tracker at: http://bugs.xmms2.org/ (account registration
+required - Linus, you can just post the reports to the mailing list)
 
 
 == See Also ==
