readd platform-specific bit
Levitation import of page 727 rev 9649.

--- a/0-/Install instructions.mediawiki
+++ b/0-/Install instructions.mediawiki
@@ -68,6 +68,13 @@ Will configure your build. Interesting options:
 
 See ./waf --help for additional options.
 
+== Platform-specific notes ==
+Some supported platforms may have variations on build requirements:
+* [[FreeBSD]]
+* [[OS_X]]
+* [[Windows]]
+* [[NetBSD]]
+
 == Build ==
 
  ./waf build
