Levitation import of page 2484 rev 9697.

--- a/0-/Finances.mediawiki
+++ b/0-/Finances.mediawiki
@@ -21,4 +21,6 @@
 |2010-03-12||GSoC mentoring 2009   || +10455.88|| 19698.85
 |-
 |2010-12-20||GSoC mentoring 2010   || +13449.62|| 33148.47
+|-
+|2011-11-18||GSoC mentoring 2011   || +13433,78|| 46582.25
 |}
