block greek webtrends.gr spam
Levitation import of page 2899 rev 9790.

--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -8,5 +8,6 @@
 #   * Every non-blank line is a regex fragment which will only match hosts inside URLs
 
 \bfindthisall\.com\b
+\bwebtrends\.gr\b
 
  #</pre> <!-- leave this line exactly as it is -->
