--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -19,6 +19,7 @@ All current clients should be found here, but not every entry in this list is up
 {{ClientTableEntry|j. xmms(2)viewer | console / curses | C++ | development stalled (2010-12) | simple playlist viewer (no editing) }}
 {{ClientTableEntry|Konfetka     | Graphical / Qt4 | C++ | in development | The kid of XMMS1 and Amarok that spent too much time around Yakuake. }}
 {{ClientTableEntry|kuechenstation| console / curses | Python | in development | text mode client with scrolling title, playlist and medialib query }}
+{{ClientTableEntry|LWXC         | Graphical / GTK | Python | in development | Client with focus on Keyboard usability. }}
 {{ClientTableEntry|LXMusic      | Graphical / GTK | C | development stalled (2010-04) | Very simple player, integrated into LXDE }}
 {{ClientTableEntry|nymp         | console / curses | Python | in development | A graphical cli client providing a tree view on your collection.  }}
 {{ClientTableEntry|Oritide      | Handheld / Web | Python, Javascript (Sproutcore) | development stalled (2010-08) | Mobile web client for iPhone and Android devices }}
