Try to get the horizontal split on the main page working again. No clue why it doesn't currently.
Levitation import of page 2064 rev 9805.

--- a/8-MediaWiki/Common.css.mediawiki
+++ b/8-MediaWiki/Common.css.mediawiki
@@ -1,4 +1,12 @@
 /** CSS placed here will be applied to all skins */
+
+/* the horizontal split on the main page */
+div.split-half {
+    width: 47%;
+    float: left;
+    padding: 1%;
+}
+
 /* wikitable/prettytable class for skinning normal tables */
 
 table.wikitable,
