get rid of float
Levitation import of page 2064 rev 9806.

--- a/8-MediaWiki/Common.css.mediawiki
+++ b/8-MediaWiki/Common.css.mediawiki
@@ -3,8 +3,10 @@
 /* the horizontal split on the main page */
 div.split-half {
     width: 47%;
-    float: left;
-    padding: 1%;
+    padding: 0 1% 0 1%;
+    margin: 0;
+    display: inline-block;
+    vertical-align: top;
 }
 
 /* wikitable/prettytable class for skinning normal tables */
