block spam from healthadvicevault.com (hopefully, they have weird plusses everywhere)
Levitation import of page 2899 rev 9813.

--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -10,5 +10,6 @@
 \bfindthisall\.com\b
 \bwebtrends\.gr\b
 \bthedailybell\.com\b
+\bhealthadvicevault\.com\b
 
  #</pre> <!-- leave this line exactly as it is -->
