Block the *-vault.(com|info)+* stuff. I think it should be specific enough with the - in the front and + at the end.
Levitation import of page 2899 rev 9830.

--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -11,5 +11,6 @@
 \bwebtrends\.gr\b
 \bthedailybell\.com\b
 \bhealthadvicevault\.com\b
+\-vault\.(info|com)\+
 
  #</pre> <!-- leave this line exactly as it is -->
