/* MPRIS v2.0 metadata guidelines */
Levitation import of page 2407 rev 9833.

--- a/0-/MPRIS Metadata.mediawiki
+++ b/0-/MPRIS Metadata.mediawiki
@@ -1,6 +1,6 @@
 == MPRIS v2.0 metadata guidelines ==
 
-See [[http://www.freedesktop.org/wiki/Specifications/mpris-spec/metadata|the freedesktop.org wiki]]
+See [http://www.freedesktop.org/wiki/Specifications/mpris-spec/metadata the freedesktop.org wiki]
 
 == MPRIS v1.0 Metadata guidelines ==
 
