Block csoonline.com
Levitation import of page 2899 rev 9841.

--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -12,5 +12,6 @@
 \bthedailybell\.com\b
 \bhealthadvicevault\.com\b
 \-vault\.(info|com)
+\bcsoonline\.com\b
 
  #</pre> <!-- leave this line exactly as it is -->
