block izmirbayaneskort.com
Levitation import of page 2899 rev 9856.

--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -13,5 +13,6 @@
 \bhealthadvicevault\.com\b
 \-vault\.(info|com)
 \bcsoonline\.com\b
+\bizmirbayaneskort\.com\b
 
  #</pre> <!-- leave this line exactly as it is -->
