--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -15,8 +15,8 @@
 * [[Release:DrLecter|DrLecter]] <s>DrLivingstone (I presume)</s> - Released 2008-06-15
 * [[Release:DrMattDestruction|DrMattDestruction]] - Released 2009-04-23
 * [[Release:DrNo|DrNo]] - Released 2010-02-19
-* [[Release:DrO_o|DrO_o]] <s>DrOnline</s>
-* [[Release:DrParnassus|DrParnassus]], DrPepper (legal issues?)
+* [[Release:DrO_o|DrO_o]] <s>DrOnline</s> - Released 2011-10-20
+* [[Release:DrParnassus|DrParnassus]], <s>DrPepper (legal issues?)</s>
 ...
 * DrStrangelove
 * DrTam?
