--- a/6-File/Dialog-warning.png.mediawiki
+++ b/6-File/Dialog-warning.png.mediawiki
@@ -1,1 +1,1 @@
-100px version of Triangle sign available at [[http://commons.wikimedia.org/w/index.php?title=File:Dialog-warning.svg]]. Released into the public domain by [http://tango.freedesktop.org/The_People The people from the Tango! project].
+100px version of Triangle sign available at [http://commons.wikimedia.org/w/index.php?title=File:Dialog-warning.svg Wikimedia Commons]. Released into the public domain by [http://tango.freedesktop.org/The_People The people from the Tango! project].
