bit more emphasis
Levitation import of page 3074 rev 10036 (minor).

--- a/8-MediaWiki/Abusefilter-warning-emailconfirm.mediawiki
+++ b/8-MediaWiki/Abusefilter-warning-emailconfirm.mediawiki
@@ -2,6 +2,6 @@
 <div style="border: #cc0000 solid 2px; padding: 1ex 1em;">
 [[File:Dialog-warning.png|left|alt=Warning sign]]
 = '''Warning!''' =
-We will not accept this change before you confirm your e-mailaddress. You can confirm your e-mailaddress from [[Special:Preferences| {{int:mypreferences}}]].
+We will not accept this change before you '''confirm your e-mailaddress'''. You can confirm your e-mailaddress from [[Special:Preferences| {{int:mypreferences}}]].
 <div style="clear:both;"></div>
 </div></div>
