--- a/8-MediaWiki/Spam-blacklist.mediawiki
+++ b/8-MediaWiki/Spam-blacklist.mediawiki
@@ -14,5 +14,6 @@
 \-vault\.(info|com)
 \bcsoonline\.com\b
 \bizmirbayaneskort\.com\b
+\bthehearingfix\.com\b
 
  #</pre> <!-- leave this line exactly as it is -->
