--- a/2-User/Nesciens.mediawiki
+++ b/2-User/Nesciens.mediawiki
@@ -1,3 +1,5 @@
 "Nesciens" means "ignorant" or "unknowing" in Latin, so do not expect anything sensible from me. (Nesciens might even be spelled wrong.)
 
-[[User:Nesciens|Nesciens]] 01:02, 5 March 2008 (CET)
+My git-tree: [http://git.xmms.se/xmms2/xmms2-nesciens/ xmms2-nesciens]
+
+[[User:Nesciens|Nesciens]] 13:56, 10 July 2012 (UTC)
