Try to trigger two filters at once
Levitation import of page 2433 rev 10113.

--- a/2-User/Nesciens.mediawiki
+++ b/2-User/Nesciens.mediawiki
@@ -3,3 +3,5 @@
 My git-tree: [http://git.xmms.se/xmms2/xmms2-nesciens/ xmms2-nesciens]
 
 [[User:Nesciens|Nesciens]] 13:56, 10 July 2012 (UTC)
+
+THIS IS A LOT OF CAPITALS AND SHOULD BE DISALLOWED!!!!!!!!!!!!!!! (and so should the excessive punctutation)
