Reverted edits by [[Special:Contributions/Nesciens|Nesciens]] ([[User talk:Nesciens|Talk]]) to last revision by [[User:Pranavwright|Pranavwright]]
Levitation import of page 2433 rev 10114 (minor).

--- a/2-User/Nesciens.mediawiki
+++ b/2-User/Nesciens.mediawiki
@@ -1,7 +1,4 @@
 "Nesciens" means "ignorant" or "unknowing" in Latin, so do not expect anything sensible from me. (Nesciens might even be spelled wrong.)
 
-My git-tree: [http://git.xmms.se/xmms2/xmms2-nesciens/ xmms2-nesciens]
-
-[[User:Nesciens|Nesciens]] 13:56, 10 July 2012 (UTC)
-
-THIS IS A LOT OF CAPITALS AND SHOULD BE DISALLOWED!!!!!!!!!!!!!!! (and so should the excessive punctutation)
+[[User:Nesciens|Nesciens]] 01:02, 5 March 2008 (CET)
+[http://cvresumewritingservices.org/ resume service]
