--- a/0-/Client:Abraca.mediawiki
+++ b/0-/Client:Abraca.mediawiki
@@ -1,1 +1,1 @@
-{{Client| |image=Client-Abraca.png| name=Abraca| author=Daniel Svensson| website=http://abraca.xmms.se/| version=[http://abraca.xmms.se/attachments/download/102/abraca-0.4.tar.gz 0.4]| devlanguage=Vala| ui=GTK2| screenshots=[http://abraca.xmms.se/attachments/91/abraca-large.png] | description=Abraca is a GTK2 client for the XMMS2 music player. It is designed with [[collections]] in mind, which makes managing your music a breeze.}}
+{{Client| |image=Client-Abraca.png| name=Abraca| author=Daniel Svensson| website=http://abraca.github.com/Abraca/| version=[https://github.com/downloads/Abraca/Abraca/abraca-0.7.1.tar.gz 0.7.1]| devlanguage=Vala| ui=GTK2| screenshots=[http://abraca.github.com/Abraca/images/abraca-osx.png] | description=Abraca is a GTK2 client for the XMMS2 music player. It is designed with [[collections]] in mind, which makes managing your music a breeze.}}
